force-app/main/default/objects/redwing__Acquisition__c/redwing__Acquisition__c.object-meta.xml
<CustomObject>
    <label>Acquisition</label>
    <nameField>
        <label>Acquisition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acquisitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>