force-app/main/default/objects/redwing__Acquisition__c/fields/redwing__Achievement__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Achievement</label>
    <referenceTo>redwing__Achievement__c</referenceTo>
    <relationshipLabel>Acquisitions</relationshipLabel>
    <relationshipName>Acquisitions</relationshipName>
    <type>Lookup</type>
</CustomField>