force-app/main/default/objects/redwing__Acquisition__c/fields/redwing__Parent_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>redwing__Parent_Acquisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This relationship to parent acquisition is used for a chain of acquisition records.</inlineHelpText>
    <label>Parent Acquisition</label>
    <referenceTo>redwing__Acquisition__c</referenceTo>
    <relationshipLabel>Acquisitions</relationshipLabel>
    <relationshipName>Acquisitions</relationshipName>
    <type>Lookup</type>
</CustomField>