force-app/main/default/objects/redwing__Acquisition__c/fields/redwing__Recurring__c.field-meta.xml
<CustomField>
    <fullName>redwing__Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the same Acquisition Rule(s) will be used for reacquisition.</inlineHelpText>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>